--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
   "rules": {
     "no-use-before-define": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
